--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@
 }
 body {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 
   background-color: hsla(228, 45%, 44%, 0.205);
 }
@@ -12,27 +17,29 @@ body {
   display: flex;
   flex-direction: column;
   width: 250px;
-  height: 400px;
+  height: 380px;
   box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.13);
   align-items: center;
+
   background-color: white;
   border-radius: 10px;
   padding: 10px 10px 10px 10px;
-  margin-top: 24rem;
-  margin-left: 72rem;
 }
 img {
   width: 220px;
   border-radius: 10px;
+  margin-bottom: 10px;
 }
-.text h3 {
+.text h4 {
   margin-top: 10px;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  text-align: center;
 }
 .text p {
   margin-top: 10px;
   font-size: 12px;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  text-align: center;
 }
 .attribution {
   margin-top: 20px;
