--- a/style.css
+++ b/style.css
@@ -16,33 +16,47 @@ body {
 .text {
   display: flex;
   flex-direction: column;
-  width: 250px;
-  height: 380px;
+  width: 358px;
+  height: 560px;
   box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.13);
   align-items: center;
 
   background-color: white;
   border-radius: 10px;
-  padding: 10px 10px 10px 10px;
+  padding-top: 10px;
 }
 img {
-  width: 220px;
+  width: 330px;
   border-radius: 10px;
-  margin-bottom: 10px;
+  margin-top: 5px;
+  margin-bottom: 15px;
 }
-.text h4 {
+.text h2 {
+  width: 90%;
   margin-top: 10px;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   text-align: center;
   color: hsl(218, 44%, 22%);
+  font-weight: 700;
 }
 .text p {
-  margin-top: 10px;
-  font-size: 12px;
+  width: 90%;
+  margin-top: 20px;
+  font-size: 15px;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   text-align: center;
   color: hsl(216, 15%, 48%);
+  font-weight: 400;
 }
 .attribution {
   margin-top: 20px;
+}
+@media (max-width: 400px) {
+  .text {
+    width: 340px;
+    height: 540px;
+  }
+  img {
+    width: 310px;
+  }
 }
